Update fate_on_cdh_deployment_guide_zh.md